<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pay it Forward UofT</string>

    <!--Main Activity-->
    <string name="button_search_tasks">Search Tasks</string>
    <string name="button_post_tasks">Post Tasks</string>
    <string name="button_manage_tasks">Manage Tasks</string>

    <!--Search Activity-->
    <string name="edit_search">Please Enter Search</string>
    <string name="button_search">Search</string>
    <string name="edit_searchList">Please Enter Search</string>
    <string name="button_searchList">Search</string>
    <string name="button_listMode">List</string>
    <string name="button_mapMode">Map</string>
    <string-array name="search_category_array">
        <item>All</item>
        <item>Clubs</item>
        <item>Courses</item>
        <item>School Life</item>
        <item>Other</item>
    </string-array>

    <!--Edit Post Activity-->
    <string name="button_post">Post</string>
    <string name="post_title_hint">Title</string>
    <string name="post_content_hint">Description</string>
    <string name="post_location_hint">Location</string>
    <string name="post_date_hint">Due Date(MMM DD, YYYY)</string>
    <string name="post_time_hint">Time(hh:mm)</string>
    <string name="date_button_set">Set Date</string>
    <string name="time_button_set">Set Time</string>

    <!--View Post Activity-->
    <string name="button_offerHelp">Offer Help!</string>
    <string name="button_add_comment">Add Comment</string>
    <string name="Comment">Comments:</string>
    <string name="button_chat">Chat!</string>
    <string name="button_complete">Complete Task</string>
    <string name="button_incomplete">Incomplete Task</string>
    <string name="button_review">Review Me!</string>

    <!-- Comment Activity-->
    <string name="Add_comment">Comment</string>
    <string name="button_comment_submit">Submit</string>

    <!--Login Activity-->
    <string name="title_activity_login">Login</string>
    <string name="login_button_label">Login</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="sign_up_text">Sign Up!</string>

    <!--Sign Up Activity-->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string-array name="signup_stringArray_emailDomain">
        <item>\@mail.utoronto.ca</item>
        <item>\@utoronto.ca</item>
    </string-array>

    <!--View Profile Activity-->
    <string name="title_activity_view_profile">Profile</string>
    <string name="button_edit_profile">Edit</string>

    <!--Edit Profile Activity-->
    <string name="button_save_profile">Save</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_email_hint">Email Address</string>
    <string name="profile_password_hint">Password</string>
    <string name="button_select_profile_photo">Select Profile Picture</string>
    <string name="button_upload_profile_photo">Upload</string>
    <string name="EditProfile_error_message">Please select picture from photo "Gallery"</string>
    <string name="EditProfile_error_title">Alert!</string>
    <string name="profile_about_hint">Your self discription</string>
    <string-array name="editpost_stringArray_clock">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <!--User Hints-->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="firstName_hint">First Name</string>
    <string name="lastName_hint">Last Name</string>

    <!--Tool Bar-->
    <string name="logout_label">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="menu_edit_profile">Edit Profile</string>

    <!--Google Maps API-->
    <string name="google_maps_key_manifest">AIzaSyAP4MNexWY_tEyVUW39_bR84EWShGzxm40</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="reply_button">Reply</string>


</resources>
