<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/searchList_linear"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/searchList_linearLayout_1"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <EditText android:id="@+id/searchList_editText_searchPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_searchList"
            />

        <Button android:id="@+id/searchList_button_sendSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_searchList"
            />

        <Spinner
            android:id="@+id/searchList_spinner_searchCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <ListView
            android:id="@+id/searchList_listView_searchResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </ListView>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center|bottom">

        <Button android:id="@+id/searchList_button_mapmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_mapMode"
            />

    </LinearLayout>

</LinearLayout>
