<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_linear"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/search_linearLayout_1"
        android:orientation="vertical"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <EditText android:id="@+id/search_editText_searchPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_search"
            />

        <Button android:id="@+id/search_button_sendSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            />

        <Spinner
            android:id="@+id/search_spinner_searchCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/search_fragment_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.mycompany.googlemapapplication.MapsActivity"
            />

        <!--this is a dumby tag to account for damages caused by below tag being taken out-->
        <ListView
            android:id="@+id/search_listView_searchResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </ListView>

    </LinearLayout>

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/search_linearLayout_2"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_weight="1.5"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->


        <!--<ListView-->
            <!--android:id="@+id/search_listView_searchResults"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!-->-->
        <!--</ListView>-->

    <!--</LinearLayout>-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center|bottom">

        <Button android:id="@+id/search_button_listmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_listMode"
            />

    </LinearLayout>

</LinearLayout>
